2005-10-26  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* javax/imageio/spi/ImageReaderWriterSpi.java
	(getStreamMetadataFormat): Implement.
	(getImageMetadataFormat): Likewise.

2005-10-26  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/colorchooser/AbstractColorChooserPanel.java
	(getMnemonic): implemented,
	(getDisplayedMnemonicIndex): implemented.

2005-10-26  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* org/omg/PortableInterceptor/AdapterManagerIdHelper.java,
	org/omg/PortableInterceptor/AdapterNameHelper.java,
	org/omg/PortableInterceptor/AdapterStateHelper.java,
	org/omg/PortableInterceptor/ORBIdHelper.java,
	org/omg/PortableInterceptor/ObjectIdHelper.java,
	org/omg/PortableInterceptor/ServerIdHelper.java: New files.
	* org/omg/PortableInterceptor/ORBInitInfoPackage/ObjectIdHelper.java
	(type): Fixed typo in typecode name.

2005-10-25  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/WrappedPlainView: New class.

2005-10-25  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicButtonUI.java
	(installDefaults): Removed initialization of unnecessary focusColor
	field.
	(paintButtonPressed): Only paint if button is opaque.
	* javax/swing/plaf/metal/MetalButtonUI.java
	(paintButtonPressed): Only paint if button is opaque and
	contentAreaFilled.

2005-10-25  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/CompositeView.java:
	(getViewIndexAtPosition): Fixed boundary conditions (less than and 
	greater than signs were backward).

2005-10-25  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/Utilities.java:
	(getBreakLocation): New API method.

2005-10-25  Tom Tromey  <tromey@redhat.com>

	* java/io/ObjectOutputStream.java (useProtocolVersion): Typo fix.

2005-10-25  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/GtkDialogPeer.java
	(create): Changed classname for the heavyweight testclass to match
	the new classes introduced by my popup patch earlier this day.
